[project]
name = "home-assistant-wetteronline"
version = "2.0.0"
requires-python = ">=3.14.2"
dependencies = ["homeassistant==2026.7.2"]

[dependency-groups]
dev = [
  "mypy>=1.16",
  "pytest>=8.3",
  "pytest-asyncio>=0.26",
  "pytest-homeassistant-custom-component>=0.13.346",
  "pyturbojpeg>=2.4.0",
  "ruff>=0.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
